--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     font-family: "Roboto", sans-serif;
-    font-size: 1rem;
 }
 
 main {
@@ -31,6 +30,7 @@ main {
     width: 100%;
     height: 100%;
     position: absolute;
+    top: 0;
     z-index: 0;
     background-color: rgba(0, 0, 0, 0);
     transition: background-color 0.8s;
@@ -48,18 +48,21 @@ main {
     left: 0;
     text-align: center;
     transition: transform 0.8s;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 .saveBtn {
     position: absolute;
     top: -100px;
     right: 20px;
-    width: 100px;
+    width: 80px;
     height: 50px;
     text-align: center;
     background-color: #D32D2F;
-    font-weight: bold;
-    font-size: 1.2em;
+    font-weight: 600;
+    font-size: 1.3em;
     color: white;
     transition: transform 0.8s;
 }
@@ -74,27 +77,31 @@ main {
 .linkBtn, .shareBtn, .moreBtn {
     background-color: white;
     height: 30px;
-    font-size: 1.1em;
-    display: inline-block;
+    font-size: 1.2em;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 5px;
     margin: 0 5px;
+    font-weight: 600;
 }
 
 
 .linkBtn {
     width: 200px;
+    padding-right: 0;
 }
 
-p.linkBtn i {
-    margin-right: 20px;
+div.linkBtn i {
+    margin-right: 10px;
 }
 
 
 .linkBtn a {
-    margin-right: 20px;
+    margin-right: 10px;
     text-decoration: none;
     color: black;
-    font-weight: 600;
 }
 
 /* 
