--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,16 +3,19 @@
     font-family: "Roboto", sans-serif;
 }
 
-main {
+/* main {
     padding: 30px;
-}
+} */
 
 .card {
     width: 360px;
     height: 450px;
     overflow: hidden;
     border-radius: 15px;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.858);
 }
 
